data/derived/comb/progs/unify/prog8508.ml.out
Characters 34-44:
  bigAdd ([List.map l*i l] []);;
           ^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type int
